k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: sample
spec:
  ports:
    - port: 8080
  selector:
    app: web-app
  type: NodePort
