k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: sample
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: minikube-example.com
      http:
        paths:
          - path: /
            pathType: Prefix  
            backend:
              service:
                name: web-service
                port:
                  number: 8080
